--- a/hello.html
+++ b/hello.html
@@ -18,6 +18,12 @@
       Bienvenue dans cette formation GIT !
    </div>
 
+   <div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sed voluptatem, aliquid explicabo,
+         accusantium soluta ex distinctio vel laboriosam nemo, ea iusto laborum aspernatur sint. Odio vel natus cumque
+         possimus!</p>
+   </div>
+
 </body>
 
 </html>
