Ajout des titres

--- a/hello.html
+++ b/hello.html
@@ -18,10 +18,18 @@
       Bienvenue dans cette formation GIT !
    </div>
 
+   <!-- description -->
    <div>
+      <h1>Ma description</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sed voluptatem, aliquid explicabo,
          accusantium soluta ex distinctio vel laboriosam nemo, ea iusto laborum aspernatur sint. Odio vel natus cumque
          possimus!</p>
+   </div>
+
+   <!-- recompense -->
+   <div>
+      <h1>Mes récompenses</h1>
+      <p>En construction</p>
    </div>
 
 </body>
