--- a/hello.html
+++ b/hello.html
@@ -32,6 +32,12 @@
       <p><img src="/images/medal_bronze.png" alt=""><img src="/images/medal_silver.png" alt=""></p>
    </div>
 
+   <!-- commandes git -->
+   <div>
+      <h1>Mes commandes git</h1>
+      <p>git pull</p>
+   </div>
+
 </body>
 
 </html>
