Ajout d'un nouveau block d'inscription

--- a/hello.html
+++ b/hello.html
@@ -40,6 +40,14 @@
       <p>git log</p>
    </div>
 
+   <!-- inscription -->
+   <div>
+      <h1>Inscription</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sed voluptatem, aliquid explicabo,
+         accusantium soluta ex distinctio vel laboriosam nemo, ea iusto laborum aspernatur sint. Odio vel natus cumque
+         possimus!</p>
+   </div>
+
 </body>
 
 </html>
