--- a/hello.html
+++ b/hello.html
@@ -29,7 +29,11 @@
    <!-- recompense -->
    <div>
       <h1>Mes récompenses</h1>
-      <p><img src="/images/medal_bronze.png" alt="">></p>
+      <p>
+         <img src="/images/medal_bronze.png" alt="">
+         <img src="/images/medal_silver.png" alt="">
+         <img src="/images/medal_gold.png" alt="">
+      </p>
    </div>
 
    <!-- commandes git -->
