Ajout de 2 commandes git

--- a/hello.html
+++ b/hello.html
@@ -41,7 +41,9 @@
       <h1>Mes commandes git</h1>
       <p>git pull</p>
       <p>git push</p>
+      <p>git merge</p>
       <p>git log</p>
+      <p>git moncul</p>
    </div>
 
    <!-- inscription -->
